--- a/dw_barbershop/pubspec.yaml
+++ b/dw_barbershop/pubspec.yaml
@@ -17,8 +17,9 @@ dependencies:
   riverpod_annotation: ^2.1.1
 
   asyncstate: ^2.0.2
-
   loading_animation_widget: ^1.2.0+4
+  shared_preferences: ^2.2.0
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
