--- a/dw_barbershop/pubspec.yaml
+++ b/dw_barbershop/pubspec.yaml
@@ -5,31 +5,32 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
 
-  cupertino_icons: ^1.0.2
-  flutter_riverpod: ^2.3.6
-  riverpod_annotation: ^2.1.1
+  cupertino_icons: ^1.0.5
+  flutter_riverpod: ^2.3.7
+  riverpod_annotation: ^2.1.2
 
   asyncstate: ^2.0.2
   loading_animation_widget: ^1.2.0+4
   shared_preferences: ^2.2.0
   validatorless: ^1.2.3
+  top_snackbar_flutter: ^3.1.0
   dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
-  custom_lint: ^0.5.1
-  riverpod_lint: ^2.0.0
-  riverpod_generator: ^2.2.5
+  flutter_lints: ^2.0.2
+  custom_lint: ^0.5.2
+  riverpod_lint: ^2.0.1
+  riverpod_generator: ^2.2.6
   build_runner: ^2.4.6
 
 
