--- a/dw_barbershop/pubspec.yaml
+++ b/dw_barbershop/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: 
+    sdk: flutter
 
 
   cupertino_icons: ^1.0.5
@@ -22,6 +24,7 @@ dependencies:
   validatorless: ^1.2.3
   top_snackbar_flutter: ^3.1.0
   table_calendar: ^3.0.9
+  intl: ^0.18.1
   dio: ^5.3.2
 
 dev_dependencies:
