--- a/dw_barbershop/pubspec.yaml
+++ b/dw_barbershop/pubspec.yaml
@@ -21,11 +21,13 @@ dependencies:
   asyncstate: ^2.0.2
   loading_animation_widget: ^1.2.0+4
   shared_preferences: ^2.2.0
+  syncfusion_flutter_calendar: ^22.2.11
   validatorless: ^1.2.3
   top_snackbar_flutter: ^3.1.0
   table_calendar: ^3.0.9
   intl: ^0.18.1
   dio: ^5.3.2
+  pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
   flutter_test:
