--- a/dw_barbershop/pubspec.yaml
+++ b/dw_barbershop/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -15,29 +15,34 @@ dependencies:
 
 
   cupertino_icons: ^1.0.6
-  flutter_riverpod: ^2.4.5
-  riverpod_annotation: ^2.3.0
+  flutter_riverpod: ^2.4.9
+  riverpod_annotation: ^2.3.3
 
   asyncstate: ^2.1.0
   loading_animation_widget: ^1.2.0+4
   shared_preferences: ^2.2.2
-  syncfusion_flutter_calendar: ^22.2.12
+  syncfusion_flutter_calendar: ^24.1.46
   validatorless: ^1.2.3
   top_snackbar_flutter: ^3.1.0
-  table_calendar: ^3.0.9
+  table_calendar: 
+    git:
+      url: https://github.com/caneto/table_calendar.git
   intl: ^0.18.1
-  dio: ^5.3.3
+  dio: ^5.4.0
   pretty_dio_logger: ^1.3.1
+
+dependency_overrides:
+  intl: 0.18.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.1
-  custom_lint: ^0.5.6
-  riverpod_lint: ^2.3.3
-  riverpod_generator: ^2.3.5
-  build_runner: ^2.4.6
+  custom_lint: ^0.5.8
+  riverpod_lint: ^2.3.7
+  riverpod_generator: ^2.3.9
+  build_runner: ^2.4.8
 
 
 flutter:
