--- a/dw_barbershop/pubspec.yaml
+++ b/dw_barbershop/pubspec.yaml
@@ -19,14 +19,18 @@ dependencies:
   riverpod_annotation: ^2.3.4
 
   asyncstate: ^2.1.0
-  loading_animation_widget: ^1.2.0+4
+  #loading_animation_widget: ^1.2.0+4
+  loading_animation_widget: 
+    git:
+      url: https://github.com/caneto/loading_animation_widget.git
   shared_preferences: ^2.2.2
   syncfusion_flutter_calendar: ^24.2.7
   validatorless: ^1.2.3
   top_snackbar_flutter: ^3.1.0
-  table_calendar: 
-    git:
-      url: https://github.com/caneto/table_calendar.git
+  table_calendar: ^3.1.0
+  #table_calendar: 
+  #  git:
+  #    url: https://github.com/caneto/table_calendar.git
   intl: ^0.18.1
   dio: ^5.4.1
   pretty_dio_logger: ^1.3.1
